--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,61 @@
 }
 
 .detail-description ul li:last-child {
-  font-weight: bold;
+  font-weight: normal;
+}
+
+/* ===== Perfil Container ===== */
+.container{
+	max-width: 1400px;
+	width: 100%;
+	margin: 0 auto;
+}
+
+section.perfil-container{
+	padding:40px 0;
+}
+
+section.perfil-container .container{
+	max-width: 1000px;
+}
+
+section.perfil-container .perfil-wraper{
+	padding-top:50%;
+	position: relative;
+}
+
+section.perfil-container .perfil-wraper2{
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+section.perfil-container .img-perfil{
+	width: 40%;
+	height: 100%;
+	background-image: url('../img/img_perfil.jpg');
+	background-size: 100% 100%;
+}
+
+section.perfil-container .texto-perfil{
+	width: 60%;
+	padding:0 30px;
+}
+
+section.perfil-container .texto-perfil h2{
+  color: var(--primary);
+	 font-size: 25px;
+}
+
+section.perfil-container .texto-perfil p{
+	color: black;
+	font-size: 14px;
+	margin-top:8px;
+	line-height: 24px;
 }
 
 /* ==== Call to Action Section ==== */
@@ -350,6 +404,7 @@ footer2 p > a{
   text-decoration: none;
 }
 
+/* =============== MOBILE ============= */
 /* =============== Mobile ============= */
 
 @media (max-width: 768px) {
@@ -452,6 +507,38 @@ footer2 p > a{
   #detail-3 .detail-description {
     order: 1;
   }
+
+  /*  === perfil container ===*/
+
+  section.perfil-container .img-perfil{
+		width: 80%;
+		padding-top:110%;
+	}
+  section.perfil-container .perfil-wraper{
+    padding-top: 0;
+  }
+
+  section.perfil-container .perfil-wraper2{
+    height: auto;
+    position: static;
+    text-align: center;
+    display: inline-block;
+  }
+
+  section.perfil-container .img-perfil{
+  width: 50%;
+  padding-top:70%;
+  display: inline-block;
+  height: auto;
+  }
+
+  section.perfil-container .texto-perfil{
+    display: inline-block;
+    text-align: justify;
+    width: 90%;
+    padding:80px 30px 30px 30px;
+  }
+
 
   /* Call to Action Section */
   #cta .btn {
